# cpp_flow

./: .gitignore  CMakeLists.txt  HttpClient.cpp  HttpClientTest.cpp  HttpServerTest.cpp  README.md  Test.h  docker-compose.yml  main.cpp  tests.h
cmake/: Findhiredis.cmake
common/: ParamsTool.hpp  RedisCli.hpp  stopwatch.hpp
common/api/: OTServerApiClient.hpp
common/cli/: KVCli.h  RedisCli.hpp
common/dto/: DTOs.hpp  OTClientDTOs.hpp  OTServerDTOs.hpp
common/exceptions/: OTError.hpp
common/http/: HttpClient.hpp  HttpClientOld.hpp  connection.cpp  connection.hpp  header.hpp  http_client.hpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp
common/schedule/: Timer.cpp  Timer.h
common/shell/: install-oatpp-modules.sh
common/util/: BitOp.hpp  DBUtils.hpp  Func.h  OatppUtils.hpp  PbUtils.hpp  Utils.cpp  Utils.h
ot/: BaseOTReceiver.hpp  BaseOTSender.hpp  Constant.h  KOutOfNForOTReceiver.hpp  KOutOfNForOTSender.hpp  Message.hpp
ot_client/: App.cpp  AppComponent.hpp  CMakeLists.txt  Dockerfile  docker-compose.yml
ot_client/conf/: ot_client.ini
ot_client/controller/: OTClientController.hpp
ot_client/service/: OTClientService.hpp
ot_client/test/: MyControllerTest.cpp  MyControllerTest.hpp  tests.cpp
ot_server/: .dockerignore  App.cpp  AppComponent.hpp  CMakeLists.txt  Dockerfile  docker-compose.yml
ot_server/conf/: ot_server.ini
ot_server/controller/: OTServerController.hpp
ot_server/dto/: DTOs.hpp
ot_server/service/: OTServerService.hpp
ot_server/test/app/: MyApiTestClient.hpp  TestComponent.hpp
proto/: mmdcotservicehttpbroker.proto
proto/src/: OTClientService.hpp
test/: Test.h
tests/: HttpTest.h  Tests.h
util/: BitOp.hpp  Func.h  Utils.cpp  Utils.h
